blocks/popup/__submit-button/popup__submit-button.css
.popup__submit-button {
  margin-top: 48px;
  font-weight: 400;
  font-size: 18px;
  line-height: 22px;
  text-align: center;
  color: white;
  background-color: #000000;
  padding: 14px 0 18px 0;
  border-radius: 2px;
  border: none;
  transition: 0.2s;
  border: 1px solid white;
}

.popup__submit-button:hover {
  opacity: 0.8;
  cursor: pointer;
}

@media screen and (max-width: 480px) {
  .popup__submit-button {
    font-weight: 400;
    font-size: 14px;
    line-height: 17px;
    margin: 45px 22px 25px 22px;
    padding: 14px 0 14px 0;
  }
}

